Bug 1003934 - Forward NS_MOUSE_EXIT events to content processes so they know the mouse has exited their frame. r=smaug